--- a/templates/create_car.html
+++ b/templates/create_car.html
@@ -9,7 +9,7 @@
     <h1>Creating a new car</h1>
     <form method="POST">
         <label for="Name">Name</label>
-        <input type="text" name="name">
+        <input type="text" name="Name">
         <br>
         <label for="Brand">Brand</label>
         <input type="text" name="Brand">
