--- a/templates/cars.html
+++ b/templates/cars.html
@@ -5,8 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+here we got cars 
+<br>
 {{range .}}
-    {{.Name, .Brand, .HP, .Price}}
+    {{.}}
     <br>
 {{end}}
 </body>
